# simoolator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  todo.txt
data/: cow_import_data.csv  data_notes.txt
dev_files/: debug_herd.py  demo_cows.json  dev_classes.ipynb  notes.txt  test_herd.pkl  test_model_herd.json
dev_scripts/: dev_create _scenario_object.ipynb  dev_notes.txt  dev_run_model_iterations.ipynb  dev_test_package.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
simoolator_demo/: demo.ipynb  demo_herd.json  demo_herd.pkl  demo_pt2.ipynb
src/simoolator/: __init__.py  cow.py  herd.py  model_registry.py  parallel_executor.c  parallel_executor.pyx  setup.py  utils.py
tests/: test_ModelRegistry.py  test_cow.py  test_herd.py  test_simoolator.py
