[tool.poetry]
name = "simoolator"
version = "0.1.0"
description = "Create and manage Cow objects as a way of running models on many individual animals at once"
authors = ["Braeden Fieguth"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
datetime = "^5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
